# MCDS-faculty

./: PLAN.md  RUN.md  TO_ADD.md
backend/: .env  .env.example  main.py  pyproject.toml  scratch_test.py  test_api.py  test_opt.py  test_opt_api.py  test_opt_api2.py  test_serialize.py  verify_seed.py
backend/alembic/: env.py
backend/alembic/versions/: 284e926e20c3_initial_schema.py  5133a8a66862_remove_old_columns.py  5ed2adcd3303_add_dynamic_data_is_internal_required_.py  87e2fd82ff4a_fix_datetime_columns.py  b084a334398a_initial_schema.py
backend/app/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: applicants.py  criteria.py  departments.py  evaluation.py  health.py  optimization.py  positions.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  applicant.py  criteria.py  department.py  position.py
backend/app/db/: session.py
backend/app/engines/: mcdm.py  optimizer.py
backend/app/models/: __init__.py  allocation.py  applicant.py  criteria.py  department.py  position.py  user.py
backend/app/schemas/: __init__.py  applicant.py  criteria.py  department.py  evaluation.py  optimization.py  position.py
backend/scripts/: check_db.py  seed.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/dashboard/: Charts.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/lib/: api.ts  export.ts
(+16 files in other folders)
